--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
+    "firebase": "^10.12.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.379.0",
     "react": "^18.2.0",
